tests/ui/feature-gates/feature-gate-ffi_const.stderr
error[E0658]: the `#[ffi_const]` attribute is an experimental feature
  --> $DIR/feature-gate-ffi_const.rs:4:5
   |
LL |     #[unsafe(ffi_const)]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58328 <https://github.com/rust-lang/rust/issues/58328> for more information
   = help: add `#![feature(ffi_const)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
